contrib: fix DML benchmark
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -200,7 +200,12 @@ envoy_cmake(
 
 envoy_cmake(
     name = "dml",
-    cache_entries = {},
+    cache_entries = {
+        "CMAKE_CXX_FLAGS": "-lstdc++",
+    },
+    env = {
+        "CXXFLAGS": "-std=c++14",
+    },
     lib_source = "@com_github_intel_dml//:all",
     out_static_libs = [
         "libdml.a",
