contrib: force CMake build in lib
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -202,6 +202,7 @@ envoy_cmake(
     name = "dml",
     cache_entries = {
         "CMAKE_CXX_FLAGS": "-lstdc++",
+        "CMAKE_INSTALL_LIBDIR": "lib",
     },
     env = {
         "CXXFLAGS": "-std=c++14",
