buffer: extend memory interface
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

format: change parameter name

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/envoy/buffer/BUILD
+++ b/envoy/buffer/BUILD
@@ -22,3 +22,8 @@ envoy_cc_library(
         "//source/common/common:utility_lib",
     ],
 )
+
+envoy_cc_library(
+    name = "memory_interface",
+    hdrs = ["memory_interface.h"],
+)
