contrib: minor change
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: minor change

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: minor change

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: minor change

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: minor change

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/contrib/dml/test/BUILD
+++ b/contrib/dml/test/BUILD
@@ -1,6 +1,7 @@
 load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_benchmark_binary",
+    "envoy_cc_test_library",
     "envoy_contrib_package",
 )
 
@@ -8,11 +9,17 @@ licenses(["notice"])  # Apache 2
 
 envoy_contrib_package()
 
+envoy_cc_test_library(
+    name = "bandwidth_lib",
+    hdrs = ["bandwidth.h"],
+    external_deps = ["benchmark"],
+)
+
 envoy_cc_benchmark_binary(
     name = "dml_speed_test",
     srcs = ["dml_speed_test.cc"],
-    external_deps = ["benchmark"],
     deps = [
+        ":bandwidth_lib",
         "//contrib/dml/source:dml",
         "//source/common/common:assert_lib",
     ],
