test: add DML memory interface benchmark
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

test: minor change

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/contrib/dml/test/BUILD
+++ b/contrib/dml/test/BUILD
@@ -24,3 +24,13 @@ envoy_cc_benchmark_binary(
         "//source/common/common:assert_lib",
     ],
 )
+
+envoy_cc_benchmark_binary(
+    name = "memory_interface_speed_test",
+    srcs = ["memory_interface_speed_test.cc"],
+    deps = [
+        ":bandwidth_lib",
+        "//contrib/dml/source:config",
+        "//source/common/buffer:default_memory_interface_lib",
+    ],
+)
