contrib: add IDXD memory interface
Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: fix release

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: fix return value of submit

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: fix completion record

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: block on fault

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: fix descriptor

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: remove redundant include

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

nit: typo

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

contrib: support batch memory copy

Signed-off-by: Xie Zhihao <zhihao.xie@intel.com>

--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -47,6 +47,23 @@ cc_library(
     ],
 )
 
+configure_make(
+    name = "idxd-config",
+    autogen = True,
+    configure_in_place = True,
+    configure_options = [
+        "--enable-shared=no",
+    ],
+    lib_source = "@com_github_intel_idxd_config//:all",
+    out_static_libs = [
+        "libaccel-config.a",
+    ],
+    tags = ["skip_on_windows"],
+    deps = [
+        ":libuuid",
+    ],
+)
+
 # Kafka client dependency used by Kafka-mesh filter.
 # librdkafka build generates extra headers that need to be copied into source to get it to compile.
 configure_make(
